--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@
         </section>
     </main>
 
-    <footer>
-        <p>2022 - Dev_Inglorius</p>
-    </footer>
+
 
     <div class="modal-overlay ">
         <div class="modal">
@@ -141,7 +139,9 @@
 
 
     
-
+    <footer>
+        <p>Copyright © 2022 Dev_Inglorious - Todos os direitos reservados</p>
+    </footer>
 
     <script src="./script.js" defer></script>
 </body> 
